# rts_assignment

./: Cargo.toml  README.md  light_adjustments.csv  report.html
benches/: bench_is_lane_green.rs  bench_monitoring_system.rs  bench_simulate_vehicle_journey.rs  bench_spawn_vehicle.rs  bench_traffic_analyzer.rs  bench_traffic_light_controller.rs
src/: data_structures.rs  global_variables.rs  lib.rs  main.rs  shared_data.rs
src/c1_tp063879/: intersections.rs  lanes.rs  mod.rs  route_generation.rs  simulation.rs  vehicles.rs
src/c2_tp063881/: mod.rs  traffic_analyzer.rs
src/c3_tp063987/: traffic_light_controller.rs
src/c4_tp071994/: traffic_monitoring_system.rs
src/communication/: messages.rs
src/control_system/: mod.rs  traffic_light_controller.rs
src/engine/: simulation.rs
src/flow_analyzer/: mod.rs  predictive_model.rs  traffic_analyzer.rs
src/models/: intersection.rs  mod.rs  vehicle.rs
src/monitoring/: mod.rs  traffic_monitoring_system.rs
src/simulation_engine/: engine.rs  grid.rs  intersection.rs  intersections.rs  lane.rs  lanes.rs  main.rs  mod.rs  movement.rs  route_generation.rs  simulation.rs  stimulation.rs  vehicles.rs
