[package]
name = "rts_assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.43", features = ["full"] }
rand = "0.9.0"
crossbeam-channel = "0.5.14"
log = "0.4.26"
env_logger = "0.11.6"
amiquip = "0.4.2"

[[bin]]
name = "simulation_main"
path = "src/bin/simulation_main.rs"

[[bin]]
name = "traffic_analyzer_main"
path = "src/bin/traffic_analyzer_main.rs"

[[bin]]
name = "traffic_light_controller_main"
path = "src/bin/traffic_light_controller_main.rs"