[package]
name = "rts_assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.9.0"
env_logger = "0.11.7"
log = "0.4.26"
amiquip = "0.4.2"
plotters = "0.3.7"
csv = "1.3.1"

[[bin]]
name = "simulation_main"
path = "src/bin/simulation_main.rs"

[[bin]]
name = "traffic_analyzer_main"
path = "src/bin/traffic_analyzer_main.rs"

[[bin]]
name = "traffic_light_controller_main"
path = "src/bin/traffic_light_controller_main.rs"

[[bin]]
name = "traffic_monitoring_system_main"
path = "src/bin/traffic_monitoring_system_main.rs"