[package]
name = "rts_assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.9.0"
env_logger = "0.11.7"
amiquip = "0.4.2"
plotters = "0.3.7"
csv = "1.3.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_spawn_vehicle"
harness = false

[[bench]]
name = "bench_update"
harness = false

[[bench]]
name = "bench_simulate_vehicle_journey"
harness = false

[[bench]]
name = "bench_is_lane_green"
harness = false

[[bin]]
name = "simulation_main"
path = "src/bin/simulation_main.rs"

[[bin]]
name = "traffic_analyzer_main"
path = "src/bin/traffic_analyzer_main.rs"

[[bin]]
name = "traffic_light_controller_main"
path = "src/bin/traffic_light_controller_main.rs"

[[bin]]
name = "traffic_monitoring_system_main"
path = "src/bin/traffic_monitoring_system_main.rs"